src/objects/CPR__c.object
<CustomObject>
    <fields>
        <fullName>NQT_Market__c</fullName>
        <inlineHelpText>Please select Market based on Area</inlineHelpText>
        <label>Market *</label>
        <picklist>
            <controllingField>NQT_Area__c</controllingField>
            <picklistValues>
                <fullName>Evansville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St. Clairesville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toledo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Youngstown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Bend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Omaha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Springfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minneapolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR/SMPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PoC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMX Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harrisburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pittston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lynchburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norfolk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Richmond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charlotte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Augusta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charlotte-A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Columbia-A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savannah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raleigh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fayetteville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raleigh-A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wilmington</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NQT_Note_I_Agree__c</fullName>
        <defaultValue>&quot;I have attached the required document(s) for project deliverable and submitted Quote to the Customer.&quot;</defaultValue>
        <label>Note:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NQT_Note__c</fullName>
        <defaultValue>&quot;Fields marked with * are mandatory.&quot;</defaultValue>
        <description>Fields marked with * are mandatory.</description>
        <inlineHelpText>Fields marked with * are mandatory.</inlineHelpText>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NQT_Note_first_note__c</fullName>
        <defaultValue>&quot;Fields marked with * are mandatory.&quot;</defaultValue>
        <description>Fields marked with * are mandatory.</description>
        <inlineHelpText>Fields marked with * are mandatory.</inlineHelpText>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NQT_PM_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PM Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_Please_enter_Reason_for_FE_Rework__c</fullName>
        <description>Please enter the reason</description>
        <inlineHelpText>Please enter the reason</inlineHelpText>
        <label>Please enter Reason for FE Rework</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NQT_Please_enter_Reason_for_SEMSC_Rework__c</fullName>
        <description>please enter the valid reason</description>
        <inlineHelpText>please enter the valid reason</inlineHelpText>
        <label>Please enter Reason for SEMSC Rework</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NQT_Please_enter_Reason_for_SE_Rework__c</fullName>
        <description>Please enter Reason for SE Rework</description>
        <inlineHelpText>Please enter Reason for SE Rework</inlineHelpText>
        <label>Please enter Reason for SE Rework</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NQT_Please_enter_Reason_for_Sales_Rework__c</fullName>
        <description>Please enter Reason for Sales Rework:</description>
        <inlineHelpText>Please enter Reason for Sales Rework:</inlineHelpText>
        <label>Please enter Reason for Sales Rework</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NQT_Product__c</fullName>
        <description>Product select picklist</description>
        <inlineHelpText>Please select Product</inlineHelpText>
        <label>Product</label>
        <picklist>
            <controllingField>NQT_Type_Of_Request__c</controllingField>
            <picklistValues>
                <fullName>BTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VPU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRANSCODER (SERVICES ONLY)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SDU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVDO - Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVDO - BTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OMCIPs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OMCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMPP Gateway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MGX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>NQT_Program_Manager_Backup__c</fullName>
        <label>Program Manager Backup</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NQT_Program_Manager_Picklist__c</fullName>
        <inlineHelpText>Please Select Program Manager</inlineHelpText>
        <label>Program Manager *</label>
        <picklist>
            <picklistValues>
                <fullName>Billy Waldridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Collins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lynne Harrison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Richard Fortune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brent Deporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matt Marcin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melanie Mumma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steven Daniels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carl Cardinale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kamamu Abubakari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robert Vorpagel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allen Strickling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doug Deakins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frances Gonzales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veronica Brady</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jack Newman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gary Lensch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hays Ron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test NQT User Program Manager1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NQT_Program_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select  Program Manager</inlineHelpText>
        <label>Program Manager*</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3) OR 4</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>NQT</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Program</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Manager</value>
            </filterItems>
            <filterItems>
                <field>User.PM__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>CPRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NQT_Project_Deliverable_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Deliverable Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_Project_Deliverable_Start__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Deliverable Start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_Project_Manager_Backup__c</fullName>
        <label>Project Manager Backup</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NQT_Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select Project Manager</inlineHelpText>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPRs5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NQT_Project_Milestone_End__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NQT Project Milestone End</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_Project_Milestone_Start__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NQT Project Milestone Start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Request in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request In-Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NQT_Quote_Log_purposes__c</fullName>
        <defaultValue>&quot;For Quote Log purposes, please enter following $ Amounts:(Enter &apos;0&apos; for fields where no values exist)&quot;</defaultValue>
        <label>Note:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NQT_Reparenting_Work_Description__c</fullName>
        <inlineHelpText>please give the Reparenting Work Description</inlineHelpText>
        <label>Reparenting Work Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NQT_Reparenting_Work_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>please select if u needed Reparenting Work</inlineHelpText>
        <label>Reparenting Work Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_Request_Submission_Date_del__c</fullName>
        <label>Request Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NQT_Requested_Quote_Delivery_Date__c</fullName>
        <inlineHelpText>Please select Requested Quote Delivery Date</inlineHelpText>
        <label>Requested Quote Delivery Date *</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NQT_Review_Deadline__c</fullName>
        <inlineHelpText>Please select Review Deadline(Ideally should be less than Requested Quote Delivery Date)</inlineHelpText>
        <label>Review Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NQT_Rework_Required__c</fullName>
        <defaultValue>&quot;To review Engineering work please check the Attachments, SOW Pricing and Equipment Lists below.&quot;&amp;BR()&amp;
&quot;If Engineering rework is required, please select the appropriate resources.&quot;</defaultValue>
        <label>Note:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NQT_SEM_agree_to_the_completeness_of_CPR__c</fullName>
        <inlineHelpText>Please select if you agree to the completeness of CPR</inlineHelpText>
        <label>I agree to the completeness of CPR MSC</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NQT_SE_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SE Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_SE_Backup__c</fullName>
        <label>SE Backup</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NQT_SE_Deadline__c</fullName>
        <label>SE Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NQT_SE_Deliverables_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SE Deliverables Completed flag</description>
        <label>SE Deliverables Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_SE_Deliverables_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please select if you have submitted all Deliverables</inlineHelpText>
        <label>SE Deliverables Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_SE_FE_SEMSC_Deliverable_Check__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SE FE SEMSC Deliverable Check</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NQT_SE_MSC_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SE_MSC_Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_SE_MSC_Backup__c</fullName>
        <label>SE MSC Backup</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NQT_SE_MSC_Deadline__c</fullName>
        <label>SE MSC Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NQT_SE_MSC_Deliverables_Completed_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SE MSC Deliverables Completed Flag</description>
        <inlineHelpText>SE MSC Deliverables Completed Flag</inlineHelpText>
        <label>SE MSC Deliverables Completed Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_SE_MSC_Deliverables_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please select if submitted all Deliverables</inlineHelpText>
        <label>SE MSC Deliverables Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_SE_MSC_Review_Comments__c</fullName>
        <label>SE MSC Review Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NQT_SE_MSC_Review__c</fullName>
        <label>SE MSC Review</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NQT_SE_MSC_Rework_Backup__c</fullName>
        <defaultValue>NULL</defaultValue>
        <label>SE MSC Rework Backup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NQT_SE_MSC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select SE MSC</inlineHelpText>
        <label>SE MSC</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3 AND 4 AND 5)</booleanFilter>
            <filterItems>
                <field>User.SEMSC__c</field>
                <operation>equals</operation>
                <value>TRUE</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>MSC</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Engineer</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>System</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>NQT</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>CPRs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NQT_SE_Review_Comments__c</fullName>
        <label>SE Review Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NQT_SE_Review__c</fullName>
        <label>SE Review</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NQT_SE_Rework_Backup__c</fullName>
        <defaultValue>NULL</defaultValue>
        <label>SE Rework Backup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NQT_SE_Services__c</fullName>
        <label>SE Services ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NQT_SE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select SE</inlineHelpText>
        <label>SE</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(2 AND 4 AND 5 AND 3) OR 1</booleanFilter>
            <filterItems>
                <field>User.SE__c</field>
                <operation>equals</operation>
                <value>TRUE</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>System</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>notContain</operation>
                <value>MSC</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Engineer</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>NQT</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>CPRs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NQT_SE_agree_to_the_completeness_of_CPR__c</fullName>
        <inlineHelpText>Please select YES if you agree to the completeness of CPR</inlineHelpText>
        <label>I agree to the completeness of CPR SE</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NQT_Sales_AM__c</fullName>
        <label>Sales-AM</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NQT_Sales_Deadline__c</fullName>
        <inlineHelpText>Please select Sales Deadline Date</inlineHelpText>
        <label>Sales Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NQT_Sales_Deliverable_End__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Deliverable End</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_Sales_Deliverable_Start__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Deliverable Start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_Sales_Rework_Backup__c</fullName>
        <label>Sales Rework Backup</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NQT_Sales_requote_is_required__c</fullName>
        <defaultValue>&quot;If Sales requote is required, please select the resource:&quot;</defaultValue>
        <label>Note:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NQT_Switch_CLLI_Code__c</fullName>
        <description>MTX Product Only</description>
        <inlineHelpText>Please select MTX Ericsson to enable Switch CLLI Code</inlineHelpText>
        <label>Switch CLLI Code</label>
        <picklist>
            <controllingField>NQT_MTX_Ericsson__c</controllingField>
            <picklistValues>
                <fullName>AGSTGABMCM2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBQNMMFCM3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AURSCOTYCM0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AURSCOTYCM1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLTNMN86CM0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHNDINAACM2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHRXNCLHCM6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLMASCMVCM6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELPSTXWRCM1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENWDCOFFCM2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUGNORBPCM3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTSMAR20CM4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLVYMNNVCM3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GNBONCFDCM3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GNBQNC15CM0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GNVLSCMZCM6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GNVLSCMZCM7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRNRNCJBCM3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRNRNCJBCM5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGVWTX16CM2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LTRKARIYCM2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LTROARTBCM0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPLSMNNVCM1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSHWINBWCM2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTGMALGMCM3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTHWNCMMCM3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCHRSCCTCM3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCHRSCPLCM1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OMAJNEBMCM5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OMALNEXUCM1</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>NQT_System_Engineering__c</fullName>
        <inlineHelpText>Please select if rework is required</inlineHelpText>
        <label>System Engineering</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NQT_System_MSC_Engineering__c</fullName>
        <description>please select if rework is required</description>
        <inlineHelpText>please select rework is required</inlineHelpText>
        <label>System MSC Engineering</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NQT_Target_Service_Finish_Date__c</fullName>
        <inlineHelpText>please select Target Service Finish Date</inlineHelpText>
        <label>Target Service Finish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NQT_Target_Service_Start_Date__c</fullName>
        <inlineHelpText>Please select Target Service Start Date</inlineHelpText>
        <label>Target Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NQT_Team_Assignment_Complet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please select if team Assignment is completed</description>
        <inlineHelpText>Please select if team Assignment is completed</inlineHelpText>
        <label>Team Assignment Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_Team_Assignment_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag</description>
        <label>Team Assignment Completed Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_Total_PO__c</fullName>
        <formula>NQT_SE_Services__c  +  NQT_FE_Services__c  +  NQT_Equipment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total PO($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NQT_Type_Of_Request__c</fullName>
        <inlineHelpText>Please select Type of Request</inlineHelpText>
        <label>Type Of Request *</label>
        <picklist>
            <picklistValues>
                <fullName>Services Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services and Equipment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NQT_Update_project__c</fullName>
        <defaultValue>&quot;To Update project status, please choose the following option:&quot;</defaultValue>
        <description>To Update project status, please choose this option</description>
        <inlineHelpText>To Update project status, please choose this option</inlineHelpText>
        <label>Note:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NQT_if_other__c</fullName>
        <inlineHelpText>Enter a value if &apos;Other&apos; is selected in Switch CLLI Code.</inlineHelpText>
        <label>If Other</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NQT_new_Is_the_CPR_Complete_and_Accurate__c</fullName>
        <defaultValue>&quot;If the CPR is not complete and accurate - please put this CPR on &apos;Customer Hold&apos; &quot;</defaultValue>
        <label>Is the CPR Complete and Accurate?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PM_Cycle_Time__c</fullName>
        <label>PM Cycle Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Received_Date__c</fullName>
        <label>PO Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PWR_Approval_Final_Feedback_Received__c</fullName>
        <inlineHelpText>Enter the date / time of approval from the Pricing War Room - in your current time zone</inlineHelpText>
        <label>PWR Approval Final Feedback Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PWR_Approval_Request_Sent__c</fullName>
        <inlineHelpText>Enter the date / time Pricing War Room Approval has been sent - in your current time zone</inlineHelpText>
        <label>PWR Approval Request Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PWR_Cycle_Time__c</fullName>
        <label>PWR Cycle Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PWR__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicate whether Pricing War Room Approval is required</inlineHelpText>
        <label>PWR Approval Required</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>